Remove MaxPermSize option from OSGi server defaults as it has been removed in Java 8
Change-Id: Idb91b40c6af1e1c8f29b65eb39f103d011ca0a38